--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ height: 50px;
 }
 
 
-button {
+.indexbutton {
     position: relative;
     padding: 13px 40px;
     background: #f5ddb7;
@@ -73,7 +73,7 @@ button {
     transform: translateY(50px); 
 }
   
-  .icon-1 {
+.icon-1, .icon-2, .icon-3, .icon-4, .icon-5 {
     position: absolute;
     top: 10%;
     left: 50%;
@@ -81,229 +81,207 @@ button {
     width: 0px;
     height: auto;
     transition: all .5s ease-in-out;
-    z-index: -1;
-  }
-  
-  .icon-2 {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, 0);
-    width: 0px;
-    height: auto;
-    transition: all .5s ease-in-out;
-    z-index: -2;
-  }
-  
-  .icon-3 {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, 0);
-    width: 0px;
-    height: auto;
-    transition: all .5s ease-in-out;
-    z-index: -2;
-  }
-  
-  .icon-4 {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, 0);
-    width: 0px;
-    height: auto;
-    transition: all .5s ease-in-out;
-    z-index: -2;
-  }
-  
-  .icon-5 {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    transform: translate(-50%, 0);
-    width: 0px;
-    height: auto;
-    transition: all .5s ease-in-out;
-    z-index: -2;
-  }
-  
-  button:hover {
+    z-index: -10; /* Ensure icons are behind the button */
+}
+
+.indexbutton:hover {
     padding: 13px 25px;
     border-radius: 8px 8px 24px 24px;
-  }
-  
-  button:hover .icon-1 {
+}
+
+.indexbutton:hover .icon-1 {
     top: -250%;
     left: 50%;
     transform: translate(-50%, 0);
     width: 50px;
     height: auto;
     animation: inIcon1 3s ease .45s forwards;
-  }
-  
-  @keyframes inIcon1 {
+}
+
+@keyframes inIcon1 {
     0% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(0deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(0deg);
     }
-  
+
     25% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(5deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(5deg);
     }
-  
+
     50% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(1deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(1deg);
     }
-  
+
     65% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(3deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(3deg);
     }
-  
+
     100% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(0deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(0deg);
     }
-  }
-  
-  button:hover .icon-2 {
-    position: absolute;
+}
+
+.indexbutton:hover .icon-2 {
     top: -200%;
     left: 90%;
     transform: translate(-50%, 0);
     width: 75px;
     height: auto;
     animation: inIcon2 1s ease .45s forwards;
-  }
-  
-  @keyframes inIcon2 {
+}
+
+@keyframes inIcon2 {
     0% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(0deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(0deg);
     }
-  
+
     35% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(10deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(10deg);
     }
-  
+
     50% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(4deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(4deg);
     }
-  
+
     80% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(5deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(5deg);
     }
-  
+
     100% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(0deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(0deg);
     }
-  }
-  
-  button:hover .icon-3 {
-    position: absolute;
+}
+
+.indexbutton:hover .icon-3 {
     top: -130%;
     left: 20%;
     transform: translate(-50%, 0);
     width: 60px;
     height: auto;
     animation: inIcon3 1s ease .45s forwards;
-  }
-  
-  @keyframes inIcon3 {
+}
+
+@keyframes inIcon3 {
     0% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(0deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(0deg);
     }
-  
+
     35% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(-2deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(-2deg);
     }
-  
+
     100% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(0deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(0deg);
     }
-  }
-  
-  button:hover .icon-4 {
-    position: absolute;
+}
+
+.indexbutton:hover .icon-4 {
     top: -300%;
     left: 10%;
     transform: translate(-50%, 0);
     width: 85px;
     height: auto;
     animation: inIcon4 1s ease .45s forwards;
-  }
-  
-  @keyframes inIcon4 {
+}
+
+@keyframes inIcon4 {
     0% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(0deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(0deg);
     }
-  
+
     40% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(-3deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(-3deg);
     }
-  
+
     100% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(0deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(0deg);
     }
-  }
-  
-  button:hover .icon-5 {
-    position: absolute;
+}
+
+.indexbutton:hover .icon-5 {
     top: -350%;
     left: 90%;
     transform: translate(-50%, 0);
     width: 85px;
     height: auto;
     animation: inIcon5 1s ease .45s forwards;
-  }
-  
-  @keyframes inIcon5 {
+}
+
+@keyframes inIcon5 {
     0% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(0deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(0deg);
     }
-  
+
     35% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(-3deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(-3deg);
     }
-  
+
     100% {
-      transform-origin: 0 100%;
-      transform: translate(-50%, 0) rotate(0deg);
+        transform-origin: 0 100%;
+        transform: translate(-50%, 0) rotate(0deg);
     }
-  }
-  
-  .fil-leaf-1 {
+}
+
+.fil-leaf-1 {
     fill: #7B9B3A
-  }
-  
-  .fil-leaf-2 {
+}
+
+.fil-leaf-2 {
     fill: #556729;
     fill-rule: nonzero
-  }
-  
-  .fil-leaf-3 {
+}
+
+.fil-leaf-3 {
     fill: #556729
-  }
-  
-  .fil-leaf-4 {
+}
+
+.fil-leaf-4 {
     fill: #3C4819
-  }
-  
-  .fil-leaf-5 {
+}
+
+.fil-leaf-5 {
     fill: #3C4819
-  }
+}
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #f5f5f5;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    width: 100%;
+    max-width: 200%;
+    margin: 30px ;
+    font-family: "Bebas Neue", sans-serif;
+    color: #607f4e;
+}
+
+@media (max-width: 768px) {
+    form {
+        padding: 20px;
+        width: 95%;
+    }
+}
+header{
+    font-family: "Bebas Neue",sans serif;
+    font-size: 300%;
+    text-align: center;
+}
