--- a/style.css
+++ b/style.css
@@ -297,13 +297,13 @@ header{
 
 .welcomecontainer h1{
     font-size: 3rem;
-    color: #97be80;
+    color: #f5f5f5;
     font-family: Bebas Neue, sans-serif;
     text-align: center;
 }
 .welcomecontainer p{
     font-size: 1.5rem;
-    color: #b2c8a5;
+    color: #f5f5f5;
     font-family: Bebas Neue, sans-serif;
     text-align: center;
 }
